--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <i class="ri-grid-fill"></i>
             <i class="ri-notification-4-line"></i>
             <div class="profile-box">
-                <img src="img/uwu.png" alt="">
+                <img src="img/1.png" alt="">
             </div>
         </div>
     </div>
